--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,12 @@
 # https://github.com/actions/deploy-pages#usage
 name: Deploy to GitHub Pages
+
 on:
   workflow_dispatch:
   push:
     branches:
       - main
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -14,25 +16,33 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: "20"
+
       # Pick your own package manager and build script
       - run: pnpm install
-      - run: pnpm run build --preset=github_pages
+      - run: pnpm run build
+        env:
+          NITRO_PRESET: github_pages
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
           path: ./.output/public
+
   # Deployment job
   deploy:
     # Add a dependency to the build job
     needs: build
+
     # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
     permissions:
       pages: write # to deploy to Pages
       id-token: write # to verify the deployment originates from an appropriate source
+
     # Deploy to the github_pages environment
     environment:
-      name: github-pages
+      name: github_pages
       url: ${{ steps.deployment.outputs.page_url }}
+
     # Specify runner + deployment step
     runs-on: ubuntu-latest
     steps:
